poke/testsuite/poke.pkl/offsets-diag-2.pk
/* { dg-do compile } */

defvar o = 23#0; /* { dg-error "bigger than zero" } */
